# haskell-idea-plugin

./: .gitignore  README.md  Test.hs  build.xml
annotations/com/intellij/openapi/editor/: annotations.xml
annotations/com/intellij/openapi/vfs/: annotations.xml
data/cabalParserTests/: Benchmark.cabal  Bool.cabal  ComplexCondition.txt  EolComment.cabal  Executable.cabal  FirstIndent.cabal  Flag.cabal  Flag.txt  FreeForm.cabal  FreeForm.txt  FreeLine.cabal  FullVersionConstraint.cabal  Identifier.cabal  InvalidField.txt  Library.cabal  ListInList.txt  Name.cabal  Name.txt  RepoSource.cabal  Simple.cabal  Simple.txt  SimpleBuildInfo.cabal  SimpleBuildInfo.txt  SimpleOptionalCommaList.cabal  SimpleOptionalCommaList.txt  SimpleTopLevel.cabal  SimpleTopLevel.txt  SimpleVersion.cabal  SimpleVersion.txt  TestSuite.cabal  TestSuite.txt  Token.cabal  Token.txt  URL.cabal  URLTest.txt  VersionConstraint.cabal  VersionConstraint.txt
data/cppTests/: CppIf.hs
data/haskellParserTests/: ALotIndents.hs  ALotIndents.txt  Backtracking.txt  DataType.txt  DoNotation.txt  FBind.hs  FBind.txt  GADT.hs  GADT.txt  GCD.txt  HelloWorld.hs  HelloWorld.txt  Imports.hs  ImportsWithData.txt  LetIn.hs  Maximum.hs  Maximum.txt  NoModuleKeyword.txt  Numbers.txt  Recovery.hs  Shape.hs  Test.hs
data/indentTests/: Braces.hs  Braces.txt  BracesIndent.txt  CaseInList.hs  CaseInList.txt  ClosingBrace.hs  ClosingBrace.txt  HelloWorld.hs  HelloWorld.txt  IndentInBracesAgain.hs  IndentInBracesAgain.txt  IndentInParenthesis.txt  LetIn.txt  LetInSameIndent.hs  OpenBraceThenClose.hs  OpenBraceThenClose.txt  SimpleIndent.hs  SimpleIndent.txt  Tabs.hs  TwoClosingBraces.hs  TwoClosingBraces.txt
generator/src/org/jetbrains/generator/: Generator.flex  Generator.kt  GrammarLexer.java  GrammarParser.kt  Main.kt  ParserException.kt  ParserGenerator.kt  TextGenerator.kt  Token.kt  TokenType.java
grammar/: Haskell.bnf  haskell.grm
grammar/src/lexer/: Haskell.flex  HaskellIndentLexer.kt  KitHaskellLexer.java
haskell/: GhcApi.cabal
haskell-ide-api/: IdeApi.cabal
haskell-ide-api/src/: Main.hs  SimpleMain.hs
haskell-ide-api/src/IdeApi/: CabalApi.hs  ParserApi.hs  SExpr.hs
haskell/src/: CabalApi.hs  GHCApi.hs  GhcApi.hs  Main.hs  SExpr.hs  parserApi.hs
parserTests/: Simple.cabal  Simple.txt
plugin/: haskell.grm
plugin/resources/colorSchemes/: HamletDefault.xml  HaskellDefault.xml  HaskellDracula.xml  JuliusDefault.xml  LuciusDefault.xml
plugin/src/org/jetbrains/cabal/: CabalApplicationComponent.kt  CabalConfig.kt  CabalFile.kt  CabalFileType.java  CabalInterface.kt  CabalLanguage.java  CabalManager.kt
plugin/src/org/jetbrains/grammar/: BaseHaskellParser.kt  FakeRuleException.kt  Main.kt
plugin/src/org/jetbrains/haskell/: HaskellLanguage.java  HaskellLanguage.kt  HaskellProjectComponent.java  HaskellProjectComponent.kt  HaskellViewProvider.java  HaskellViewProvider.kt  TestScion.kt
plugin/src/org/jetbrains/yesod/: HamletLanguage.java
plugin/test/org/jetbrains/: Constants.java
plugin/testresources/: TestMain.hs  unittest.properties
plugin/testresources/data/cabalParserTests/: Benchmark.txt  Bool.txt  ComplexCondition.cabal  ComplexVersionConstraint.cabal  ComplexVersionConstraint.txt  EolComment.cabal  EolComment.txt  Executable.txt  FreeLine.txt  FullVersionConstraint.txt  Identifier.txt  IfElseSection.cabal  IfElseSection.txt  InvalidField.cabal  Library.txt  ListInList.cabal  RepoSource.txt  SimpleCondition.cabal  SimpleCondition.txt  SimpleTopLevel.cabal  SimpleVersion.txt  TestSuite.cabal
plugin/testresources/data/cppTests/: CppIf.txt
plugin/testresources/data/haskellParserTests/: ALotIndents.txt  Backtracking.hs  DoNotation.hs  GCD.hs  HelloWorld.txt  Imports.txt  ImportsWithData.hs  Instance.hs  Instance.txt  Maximum.txt  NoModuleKeyword.hs  Numbers.hs
plugin/testresources/data/indentTests/: Braces.txt  BracesIndent.hs  CaseInList.txt  HelloWorld.txt  IndentInBraces.hs  IndentInBraces.txt  IndentInParenthesis.hs  LetIn.txt  LetInSameIndent.txt  SimpleIndent.txt  Tabs.txt  TwoClosingBraces.txt
plugin/testresources/data/recoveryTests/: Recovery.txt
src/org/jetbrains/cabal/: CabalFile.java  CabalFile.kt  CabalFileType.java  CabalInterface.kt
src/org/jetbrains/cabal/actions/: RunBuildAction.java  RunBuildAction.kt  RunConfigureAction.java  RunConfigureAction.kt  UpdateModule.kt
src/org/jetbrains/cabal/highlight/: CabalAnnotator.java  CabalAnnotator.kt
src/org/jetbrains/cabal/parser/: Cabal.flex  CabalParser.kt  CabalTokelTypes.kt  CaballParserDefinition.java  _CabalLexer.java
src/org/jetbrains/cabal/psi/: Executable.kt  Name.kt  (+2 more)
src/org/jetbrains/haskell/: HaskellProjectComponent.java
test/org/jetbrains/haskell/: CabalParsingTest.java
tools/: idea-flex.skeleton
(+799 files in other folders)
