name:              HaskellIdeApi
version:           0.1
Build-Type:        Simple
cabal-version:     >= 1.2

executable haskell-ide-api
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   ghc,
                   hackage-db,
                   Cabal,
                   json,
                   ghc-paths,
                   directory,
                   filepath

