name:              GhcApi
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable ghcApi
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   ghc,
                   hackage-db,
                   Cabal,
                   json,
                   ghc-paths,
                   directory,
                   filepath

