name:                Simple
version:             1.0
Build-Type:          Simple
cabal-version:       >= 1.2
package-url:         //some_url.com/folder/
homepage:            //www.vk.com
license:             identifier
license-file:        filename or
license-files:       filename list
copyright:           freeform
author:              freeform
maintainer:          address
stability:           freeform
homepage:            URL
bug-reports:         URL
package-url:         URL
synopsis:            freeform
description:         freeform
category:            freeform
tested-with:         compiler list
data-files:          filename list
data-dir:            directory
extra-source-files:  filename list
extra-doc-files:     filename list
extra-tmp-files:     filename list
