name:                Simple
version:             1.0
Build-Type:          Simple
cabal-version:       >= 1.2

package-url:         //some_url.com/folder/
homepage:            //www.vk.com
license:             identifier
license-file:        filename

copyright:           freeform
author:              freeform
maintainer:          address
stability:           freeform

bug-reports:         URL
synopsis:            freeform
description:         freeform
category:            freeform

tested-with:         compilerlist
data-files:          filenamelist
data-dir:            directory
extra-source-files:  filenamelist
extra-tmp-files:     filenamelist